[package]
name = "dockerfile-rs"
version = "0.3.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
description = "Correct Dockerfile generator library"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ark0f/dockerfile.rs"
documentation = "https://docs.rs/dockerfile-rs"
readme = "README.md"
keywords = ["docker", "dockerfile", "generator"]
categories = ["config"]
include = ["LICENSE-*.md", "Cargo.toml", "src/**/*.rs"]
edition = "2018"

[badges]
travis-ci = { repository = "ark0f/dockerfile.rs", branch = "master" }
